--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h2>Book Your Flight</h2>
             <form id="bookingForm">
                 <select id="departure" name="departure">
-                    <option value="" disabled selected>Destination To</option>
+                    <option value="" disabled selected>Destination From</option>
                     <option value="Visakhapatnam">Visakhapatnam</option>
                     <option value="Hyderabad">Hyderabad</option>
                     <option value="Vijayawada">Vijayawada</option>
